--- a/package.json
+++ b/package.json
@@ -1,33 +1,37 @@
 {
-  "name": "meu-mulungu",
+  "name": "acesso-cidadao-mulungu",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "lucide-react": "0.263.1",
-    "react-hook-form": "7.45.4",
-    "react-hot-toast": "2.4.1",
-    "qrcode.react": "3.1.0",
-    "zod": "3.22.2",
-    "axios": "1.4.0",
-    "cheerio": "1.0.0-rc.12",
-    "iconv-lite": "0.6.3",
-    "embla-carousel-react": "8.0.0",
-    "embla-carousel-autoplay": "8.0.0",
-    "@hookform/resolvers": "^5.2.2",
-    "next": "^16.1.1"
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "lucide-react": "latest",
+    "react-hook-form": "latest",
+    "react-hot-toast": "latest",
+    "@hookform/resolvers": "latest",
+    "zod": "latest",
+    "qrcode.react": "latest",
+    "axios": "latest",
+    "cheerio": "latest",
+    "iconv-lite": "latest",
+    "embla-carousel-react": "latest",
+    "embla-carousel-autoplay": "latest",
+    "framer-motion": "latest"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
